# reactos

./: .gitignore  configure.cmd  create_ntfs_boot_image.sh
drivers/filesystems/: CMakeLists.txt
drivers/filesystems/fs_rec/: ntfs.c
drivers/filesystems/ntfs/: blockdev.c  ntfs.h
drivers/filesystems/ntfs3g/: CMakeLists.txt  README.ntfs3g.md  close.c  create.c  ea.c  fastio.c  fileinfo.c  fsctrl.c  ntfs.rc  ntfsinit.c  ntfspch.h  read.c  vol.c  write.c
drivers/filesystems/ntfs3g/include/: ctxblks.h  dispatch.h  ntfs3g_ros_km.h
drivers/filesystems/ntfs3g/km/: host.c
drivers/filesystems/ntfs_new/: CMakeLists.txt  attributes.h  close.c  close.cpp  contextblocks.h  create.c  create.cpp  ea.c  ea.cpp  fileinfo.c  fileinfo.cpp  filerecord.cpp  filerecord.h  fsctrl.c  fsctrl.cpp  mft.cpp  mft.h  ntblockio.cpp  ntblockio.h  ntfs.cpp  ntfs.h  ntfsdata.h  ntfsdbgprint.h  ntfsdriver.cpp  ntfsdriver.h  ntfsinit.c  ntfsinit.cpp  ntfspartition.cpp  ntfspartition.h  ntfspch.h  ntfsprocs.h  ntfsvol.cpp  ntfsvol.h  pnp.c  read.c  read.cpp  registry.c  security.c  vol.c  vol.cpp  (+2 more)
drivers/filesystems/ntfs_new/btree/: btree.cpp  btree.h  dbg.cpp  find.cpp  write.cpp
drivers/filesystems/ntfs_new/btree/directory/: btree.c  create.cpp  dbg.cpp  directory.cpp  directory.h  editdir.cpp  find.cpp  get.cpp  oldbtreefuncs.cpp  util.cpp
drivers/filesystems/ntfs_new/directory/: dbg.cpp  directory.cpp  directory.h  find.cpp  get.cpp
drivers/filesystems/ntfs_new/filerecord/: attributes.h  copy.cpp  filerecord.cpp  filerecord.h  find.cpp  fixup.cpp  write.cpp
drivers/filesystems/ntfs_new/filerecord/attributes/: addattr.cpp  attributes.h  findattr.cpp
drivers/filesystems/ntfs_new/filerecord/read/: copy.cpp
drivers/filesystems/ntfs_new/filerecord/write/: disk.cpp  filedata.cpp
drivers/filesystems/ntfs_new/include/: btree.h  ctxblks.h  dbg.h  dispatch.h  filerecord.h  lfs.h  mft.h  reg.h  tags.h
drivers/filesystems/ntfs_new/io/: close.cpp  contextblocks.h  create.cpp  ctxblks.h  ea.cpp  fastio.cpp  filebothdir.h  fileinfo.cpp  fileinfo.h  fsctrl.cpp  fsctrl.h  ntblockio.cpp  ntfsdata.h  ntfsinit.cpp  ntfsprocs.h  pnp.cpp  read.cpp  registry.cpp  util.cpp  vol.cpp  vol.h  write.cpp
drivers/filesystems/ntfs_new/io/create/: create.cpp
drivers/filesystems/ntfs_new/io/fileinfo/: filebothdir.h  fileinfo.cpp  fileinfo.h
drivers/filesystems/ntfs_new/io/fsctrl/: fsctrl.cpp  fsctrl.h
drivers/filesystems/ntfs_new/io/read/: read.cpp  read.h
drivers/filesystems/ntfs_new/io/vol/: vol.cpp  vol.h
drivers/filesystems/ntfs_new/lfs/: lfs.cpp  lfs.h  logfile.h  usnjrnl.h
drivers/filesystems/ntfs_new/mft/: get.cpp  mft.cpp  mft.h
drivers/filesystems/ntfs_new/ntfslogic/: attributes.h  contextblocks.h  mft.cpp  mft.h  ntfsdbgprint.h  ntfspartition.cpp
drivers/filesystems/ntfs_new/ntfsvol/: disk.cpp  metadata.cpp  ntfsvol.cpp  ntfsvol.h  sanity.cpp
drivers/filesystems/ntfs_new/ntfsvol/metadata/: attrdef.cpp  bitmap.cpp  upcase.cpp  volume.cpp
drivers/filesystems/ntfs_old/: mft.cpp  mft.h  ntblockio.cpp  ntfs.cpp  ntfs.h  ntfsdriver.cpp  ntfsdriver.h  ntfspartition.cpp  ntfspartition.h  util.cpp
modules/rosapps/applications/rosinternals/ntfsinfo/: CMakeLists.txt  ntfsinfo.c  ntfsinfo.cpp
ntoskrnl/cc/: pin.c
sdk/lib/fslib/ntfslib_new/: CMakeLists.txt  README.md  ntfs_tags.h  ntfslib_new.h  util.cpp
sdk/lib/fslib/ntfslib_new/btree/: btree.cpp
sdk/lib/fslib/ntfslib_new/btree/directory/: dbg.cpp  directory.cpp  directory.h  editdir.cpp  find.cpp  util.cpp
sdk/lib/fslib/ntfslib_new/capi/: btree.cpp  filerecord.cpp
sdk/lib/fslib/ntfslib_new/env/: CMakeLists.txt  fl.cpp  km.cpp
sdk/lib/fslib/ntfslib_new/env/fl/: CMakeLists.txt
sdk/lib/fslib/ntfslib_new/env/km/: CMakeLists.txt  km.cpp  ntfs_km.h
sdk/lib/fslib/ntfslib_new/env/linux/: linux.cpp  ntfs_linux.h
sdk/lib/fslib/ntfslib_new/env/um/: CMakeLists.txt  ntfs_um.h  um.cpp
sdk/lib/fslib/ntfslib_new/enviornments/: km.cpp  um.cpp
sdk/lib/fslib/ntfslib_new/filerecord/: filerecord.cpp  filerecord.h  fixup.cpp
sdk/lib/fslib/ntfslib_new/filerecord/attributes/: findattr.cpp
sdk/lib/fslib/ntfslib_new/filerecord/read/: copy.cpp
sdk/lib/fslib/ntfslib_new/filerecord/write/: filedata.cpp
sdk/lib/fslib/ntfslib_new/include/internal/: attributes.h  btree.h  capi.h  dbg.h  filerecord.h  lfs.h  ntfslib_new_internal.h  ntfsprobe.h  ntfsvol.h
sdk/lib/fslib/ntfslib_new/include/public/: btree.h  filerecord.h  mft.h  ntfsattribdef.h  ntfsenv.h  ntfslib_new.h  ntfsvol.h
sdk/lib/fslib/ntfslib_new/lfs/: lfs.cpp  lfs.h
sdk/lib/fslib/ntfslib_new/linux/: CMakeLists.txt  README.md
sdk/lib/fslib/ntfslib_new/linux/fuse/: CMakeLists.txt  ntfslib_fuse.cpp
sdk/lib/fslib/ntfslib_new/linux/tests/: ads_smoke.sh  basic_info_smoke.sh  benchmark_core.sh  benchmark_fuse.sh  create_smoke.sh  data_write_smoke.sh  ea_write_smoke.sh  growth_write_smoke.sh  image_smoke.sh  label_write_smoke.sh  namespace_smoke.sh  posix_bench.cpp  reparse_write_smoke.sh  resident_update.cpp  security_smoke.sh  sparse_write_smoke.sh  truncate_smoke.sh  wof_fixture.cpp  wof_smoke.sh
sdk/lib/fslib/ntfslib_new/mft/: get.cpp  mft.cpp  mft.h
sdk/lib/fslib/ntfslib_new/ntfsvol/: disk.cpp  ntfsvol.cpp  ntfsvol.h  sanity.cpp
sdk/lib/fslib/ntfslib_new/ntfsvol/metadata/: attrdef.cpp  bitmap.cpp  upcase.cpp  volume.cpp
sdk/lib/fslib/ntfslib_new/src/: CMakeLists.txt  NtfsIsNameInExpression.cpp  util.cpp
sdk/lib/fslib/ntfslib_new/src/btree/: btree.cpp
sdk/lib/fslib/ntfslib_new/src/capi/: btree.cpp  filerecord.cpp  lfs.cpp  mft.cpp  volume.cpp
sdk/lib/fslib/ntfslib_new/src/filerecord/: filerecord.cpp  fixup.cpp
sdk/lib/fslib/ntfslib_new/src/lfs/: lfs.cpp
sdk/lib/fslib/ntfslib_new/src/mft/: create.cpp  get.cpp  mft.cpp  namespace.cpp
sdk/lib/fslib/ntfslib_new/src/ntfsvol/: disk.cpp  ntfsvol.cpp
sdk/lib/fslib/ntfslib_new/src/volume/: disk.cpp  sanity.cpp  volume.cpp
sdk/lib/gcc-compat/: CMakeLists.txt  InitializeConditionVariable.c  SleepConditionVariableCS.c  WakeAllConditionVariable.c  WakeConditionVariable.c  btowc.c  condvar_compat.h  wctob.c  wctype_compat.c
(+93 files in other folders)
