
add_subdirectory(btrfs)
add_subdirectory(cdfs)
add_subdirectory(ext2)
add_subdirectory(fastfat)
add_subdirectory(fs_rec)
add_subdirectory(msfs)
add_subdirectory(mup)
add_subdirectory(nfs)
add_subdirectory(npfs)
# NOTE: To use ntfsinfo, you need to currently use the old ntfs driver.
# I need to add the ability to read raw disk.
# add_subdirectory(ntfs)
add_subdirectory(ntfs_new)
add_subdirectory(udfs)
add_subdirectory(vfatfs)
